# inference-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  force-docs-build.yml  label-pr.yml  push-to-rdme.yml  rdme-docs.yml
client/: base.py  base_client.py  client.py  helper.py
docs/: .buildinfo  404.html  CNAME  api.rst  conf.py  index.html  index.md  objects.inv  searchindex.js  sitemap.xml
docs/_modules/: index.html
docs/_sources/api/: inference_client.base.rst.txt  inference_client.client.rst.txt  inference_client.config.rst.txt  inference_client.helper.rst.txt  (+3 more)
docs/_templates/: page.html
docs/genindex/: index.html
docs/getting_started/: connect_model.md  connecting_model.md  create_model.md  index.html  index.md  initialization.md
docs/performing_tasks/: caption.md  encode.md  index.html  index.md  rank.md  vqa.md
docs/py-modindex/: index.html
docs/search/: index.html
docs/user-guides/: client.md  construct_client.md  getting_started.md
inference_client/: __init__.py  __version__.py  base.py  client.py  config.py  helper.py  inference_client.py  logging.py  model.py
inference_client/tasks/: caption.py  encode.py  generate.py  helper.py  image_to_image.py  rank.py  text_to_image.py  upscale.py  vqa.py
scripts/: black.sh  get-all-test-paths.sh  release.sh
tests/: conftest.py  executor.py  helper.py  test_caption.py  test_encode.py  test_helper.py  test_image_to_image.py  test_init.py  test_login.py  test_rank.py  test_task.py  test_text_to_image.py  test_upscale.py  test_vqa.py
(+15 files in other folders)
