[tool.poetry]
name = "inference_client"
version = "0.0.5"
description = "Python Client for Jina Inference API"

license = "Apache-2.0"

authors = [
    "Jina AI <hello@jina.ai>"
]

repository = "https://github.com/jina-ai/inference-client"
homepage = "https://inference-api.jina.ai"

packages = [
    { include = "inference_client" },
]

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["jina", "inference", "api", "client"]

exclude = ["tests/**/*"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.8,<4.0.0"
pydantic = "^1.10.7"
docarray = "^0.21.0"
jina  = "^3.14.0"
jina-hubble-sdk = ">=0.34.0"
rich = "^13.3.0"
pillow = "^9.4.0"
torch = {version = ">=1.10.0", optional = true}

[tool.poetry.extras]
pytorch = ["torch"]

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

# ...and can be installed only when explicitly requested
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

## Python-style entrypoints and scripts are easily expressed
#[tool.poetry.scripts]
#my-script = "my_package:main"